k8s/k8s-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: nodejs-app
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000

---
#apiVersion: v1
#kind: Service
#metadata:
#  name: mini-budget-tracker-service
#  namespace: default
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
#spec:
#  selector:
#    app: mini-budget-tracker
#  type: ClusterIP
#  ports:
#    - port: 3000
#      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: k8sgpt-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: k8sgpt
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
