k8s/retro-arcade-galaxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retro-arcade-galaxy
  namespace: default
spec:
  replicas: ${RETRO_ARCADE_GALAXY_HPA_MIN}
  selector:
    matchLabels:
      app: retro-arcade-galaxy
  template:
    metadata:
      labels:
        app: retro-arcade-galaxy
    spec:
      containers:
      - name: retro-arcade-galaxy
        image: "meetpatel1111/retro-arcade-galaxy:${ENVIRONMENT}"
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: retro-arcade-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: retro-arcade-galaxy
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
