k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
spec:
  ingressClassName: nginx   # replaces deprecated annotation
  rules:
    - http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /nodejs
            pathType: Prefix
            backend:
              service:
                name: nodejs-service
                port:
                  number: 3000
          - path: /k8sgpt
            pathType: Prefix
            backend:
              service:
                name: k8sgpt-service
                port:
                  number: 80
